go_yacc.output
Nonterminals useless in grammar

   Result


Terminals unused in grammar

   BooleanValue
   BIT_ASSIGN


Rules useless in grammar

  330 Result: Parameters
  331       | Type


Rules useless in parser due to conflicts

  281 IdetifierGodefBrakets: /* empty */

  307 InitStmtBracket: /* empty */


State 54 conflicts: 22 shift/reduce
State 72 conflicts: 1 shift/reduce, 23 reduce/reduce
State 81 conflicts: 1 shift/reduce
State 90 conflicts: 1 shift/reduce
State 99 conflicts: 2 shift/reduce
State 121 conflicts: 22 shift/reduce
State 127 conflicts: 22 shift/reduce
State 135 conflicts: 2 shift/reduce, 10 reduce/reduce
State 140 conflicts: 1 shift/reduce
State 144 conflicts: 22 shift/reduce
State 151 conflicts: 1 shift/reduce
State 152 conflicts: 10 reduce/reduce
State 163 conflicts: 1 shift/reduce
State 171 conflicts: 22 shift/reduce
State 176 conflicts: 1 shift/reduce
State 192 conflicts: 2 shift/reduce, 25 reduce/reduce
State 206 conflicts: 31 shift/reduce
State 210 conflicts: 1 reduce/reduce
State 215 conflicts: 2 shift/reduce, 7 reduce/reduce
State 248 conflicts: 22 shift/reduce
State 250 conflicts: 1 reduce/reduce
State 260 conflicts: 22 shift/reduce
State 266 conflicts: 22 shift/reduce
State 299 conflicts: 1 shift/reduce, 1 reduce/reduce
State 318 conflicts: 26 shift/reduce
State 347 conflicts: 22 shift/reduce, 32 reduce/reduce
State 365 conflicts: 2 shift/reduce, 6 reduce/reduce
State 381 conflicts: 22 shift/reduce
State 382 conflicts: 12 shift/reduce
State 392 conflicts: 2 shift/reduce, 6 reduce/reduce
State 409 conflicts: 22 shift/reduce
State 414 conflicts: 1 shift/reduce


Grammar

    0 $accept: SourceFile $end

    1 Type: TypeName
    2     | TypeName TypeArgs
    3     | '(' Type ')'
    4     | TypeLit

    5 TypeName: IDENTIFIER
    6         | QualifiedIdent

    7 TypeList: TypeList ',' Type
    8         | Type

    9 TypeArgs: '[' TypeList ']'

   10 TypeLit: ArrayType
   11        | StructType
   12        | PointerType
   13        | FunctionType
   14        | InterfaceType
   15        | SliceType
   16        | MapType
   17        | ChannelType
   18        | ANY
   19        | FLOAT
   20        | BOOL
   21        | BYTE
   22        | COMPARABLE
   23        | COMPLEX
   24        | ERROR
   25        | INT
   26        | RUNE
   27        | STRING

   28 QualifiedIdent: IDENTIFIER '.' IDENTIFIER

   29 ArrayType: '[' Expression ']' Type

   30 SliceType: '[' ']' Type

   31 StructType: STRUCT '{' StructTypeLoop '}'

   32 StructTypeLoop: FieldDecl SEMICOLON ';' StructTypeLoop
   33               | /* empty */

   34 FieldDecl: IdentifierList Type
   35          | IdentifierList Type StringValue
   36          | EmbeddedField
   37          | EmbeddedField StringValue

   38 EmbeddedField: TypeName
   39              | '*' TypeName
   40              | TypeName TypeArgs
   41              | '*' TypeName TypeArgs

   42 PointerType: '*' Type

   43 FunctionType: FUNC Signature

   44 Signature: Parameters
   45          | Parameters Type

   46 Parameters: '(' ')'
   47           | '(' ParameterList ')'
   48           | '(' ParameterList ',' ')'

   49 ParameterList: ParameterDecl
   50              | ParameterDecl ',' ParameterDecl

   51 ParameterDecl: Type
   52              | IdentifierList Type
   53              | ARGS Type
   54              | IdentifierList ARGS Type

   55 InterfaceType: INTERFACE '{' InterfaceType '}'
   56              | IDENTIFIER '(' ')' SEMICOLON
   57              | IDENTIFIER '(' ParameterList ')' SEMICOLON
   58              | IDENTIFIER '(' ParameterList ',' ')' SEMICOLON
   59              | IDENTIFIER '(' ')' '(' ')' SEMICOLON
   60              | IDENTIFIER '(' ParameterList ')' '(' ')' SEMICOLON
   61              | IDENTIFIER '(' ParameterList ',' ')' '(' ')' SEMICOLON
   62              | IDENTIFIER '(' ')' '(' ParameterList ')' SEMICOLON
   63              | IDENTIFIER '(' ParameterList ')' '(' ParameterList ')' SEMICOLON
   64              | IDENTIFIER '(' ParameterList ',' ')' '(' ParameterList ')' SEMICOLON
   65              | IDENTIFIER '(' ')' '(' ParameterList ',' ')' SEMICOLON
   66              | IDENTIFIER '(' ParameterList ')' '(' ParameterList ',' ')' SEMICOLON
   67              | IDENTIFIER '(' ParameterList ',' ')' '(' ParameterList ',' ')' SEMICOLON
   68              | IDENTIFIER '(' ')' Type SEMICOLON
   69              | IDENTIFIER '(' ParameterList ')' Type SEMICOLON
   70              | IDENTIFIER '(' ParameterList ',' ')' Type SEMICOLON
   71              | TypeElem SEMICOLON

   72 TypeElem: Type TypeElem
   73         | '~' Type TypeElem
   74         | '|' Type
   75         | '|' '~' Type

   76 MapType: MAP '[' Type ']' Type

   77 ChannelType: CHAN Type
   78            | CHAN CHANNELOP Type
   79            | CHANNELOP CHAN Type

   80 Declaration: ConstDecl
   81            | TypeDecl
   82            | VarDecl

   83 TopLevelDecl: Declaration
   84             | FunctionDecl
   85             | MethodDecl

   86 ConstDecl: CONST ConstSpec
   87          | CONST '(' ConstSpecLoop ')'

   88 ConstSpec: IdentifierList Type '=' ExpressionList
   89          | IdentifierList '=' ExpressionList
   90          | IdentifierList

   91 ConstSpecLoop: ConstSpec SEMICOLON ConstSpecLoop
   92              | /* empty */

   93 IdentifierList: IdentifierList ',' IDENTIFIER
   94               | IDENTIFIER

   95 ExpressionList: ExpressionList ',' Expression
   96               | Expression

   97 TypeDecl: TYPE TypeSpec
   98         | TYPE '(' TypeSpecLoop ')'

   99 TypeSpec: AliasDecl
  100         | TypeDef

  101 TypeSpecLoop: TypeSpec SEMICOLON TypeSpecLoop
  102             | /* empty */

  103 AliasDecl: IDENTIFIER '=' Type

  104 TypeDef: IDENTIFIER Type
  105        | IDENTIFIER TypeParameters Type

  106 TypeParameters: '[' TypeParamList ']'
  107               | '[' TypeParamList ',' ']'

  108 TypeParamList: TypeParamList ',' TypeParamDecl
  109              | TypeParamDecl

  110 TypeParamDecl: IdentifierList TypeElem

  111 VarDecl: VAR VarSpec
  112        | VAR '(' VarSpecLoop ')'

  113 VarSpec: IdentifierList Type '=' ExpressionList
  114        | IdentifierList Type
  115        | IdentifierList '=' ExpressionList

  116 VarSpecLoop: VarSpec SEMICOLON VarSpecLoop
  117            | /* empty */

  118 ShortVarDecl: IdentifierList GODEF ExpressionList

  119 FunctionDecl: FUNC IDENTIFIER TypeParameters Signature FunctionBody
  120             | FUNC IDENTIFIER Signature FunctionBody
  121             | FUNC IDENTIFIER TypeParameters Signature
  122             | FUNC IDENTIFIER Signature

  123 FunctionBody: Block

  124 MethodDecl: FUNC Parameters IDENTIFIER Signature FunctionBody
  125           | FUNC Parameters IDENTIFIER Signature

  126 Operand: Literal
  127        | OperandName TypeArgs
  128        | OperandName
  129        | '(' Expression ')'

  130 Literal: BasicLit
  131        | CompositeLit
  132        | FunctionLit

  133 BasicLit: IntegerValue
  134         | FloatValue
  135         | ImaginaryValue
  136         | StringValue

  137 CompositeLit: LiteralType LiteralValue

  138 LiteralType: StructType
  139            | ArrayType
  140            | '[' ARGS ']' Type
  141            | SliceType
  142            | MapType
  143            | TypeName
  144            | TypeName TypeArgs

  145 LiteralValue: '{' ElementList ',' '}'
  146             | '{' ElementList '}'
  147             | '{' '}'

  148 KeyedElement: Key ':' Element
  149             | Element

  150 ElementList: ElementList ',' KeyedElement
  151            | KeyedElement

  152 Key: IDENTIFIER
  153    | Expression
  154    | LiteralValue

  155 Element: Expression
  156        | LiteralValue

  157 FunctionLit: FUNC Signature FunctionBody

  158 OperandName: IDENTIFIER
  159            | QualifiedIdent

  160 PrimaryExpr: Operand
  161            | Conversion
  162            | MethodExpr
  163            | PrimaryExpr Selector
  164            | PrimaryExpr Index
  165            | PrimaryExpr Slice
  166            | PrimaryExpr TypeAssertion
  167            | PrimaryExpr Arguments

  168 Selector: '.' IDENTIFIER

  169 Index: '[' Expression ']'

  170 Slice: '[' ExpressionLoop COLON ExpressionLoop ']'
  171      | '[' ExpressionLoop COLON Expression COLON Expression ']'

  172 ExpressionLoop: Expression
  173               | /* empty */

  174 TypeAssertion: '.' '(' Type ')'

  175 Arguments: '(' ArgumentsLoop ')'

  176 ArgumentsLoop: ExpressionList ARGS ','
  177              | ExpressionList ARGS
  178              | ExpressionList ','
  179              | ExpressionList
  180              | Type ARGS ','
  181              | Type ARGS
  182              | Type ','
  183              | Type
  184              | Type ',' ExpressionList ARGS ','
  185              | Type ',' ExpressionList ARGS
  186              | Type ',' ExpressionList ','
  187              | Type ',' ExpressionList
  188              | /* empty */

  189 MethodExpr: ParametersType '.' IDENTIFIER

  190 ParametersType: Type

  191 Expression: UnaryExpr
  192           | Expression binary_op Expression

  193 UnaryExpr: PrimaryExpr
  194          | unary_op UnaryExpr

  195 binary_op: AND
  196          | OR
  197          | rel_op
  198          | add_op
  199          | mul_op

  200 rel_op: COMPARE

  201 add_op: '+'
  202       | '-'
  203       | '|'
  204       | '^'

  205 mul_op: '*'
  206       | '/'
  207       | '%'
  208       | LRSHIFT
  209       | '&'

  210 unary_op: '+'
  211         | '-'
  212         | '!'
  213         | '^'
  214         | '*'
  215         | '&'
  216         | CHANNELOP

  217 Conversion: Type '(' Expression ',' ')'
  218           | Type '(' Expression ')'

  219 Statement: Declaration
  220          | LabeledStmt
  221          | SimpleStmt
  222          | GoStmt
  223          | ReturnStmt
  224          | BreakStmt
  225          | ContinueStmt
  226          | GotoStmt
  227          | FallthroughStmt
  228          | Block
  229          | IfStmt
  230          | SwitchStmt
  231          | SelectStmt
  232          | ForStmt
  233          | DeferStmt

  234 LabeledStmt: IDENTIFIER COLON Statement

  235 SimpleStmt: EmptyStmt
  236           | ExpressionStmt
  237           | SendStmt
  238           | IncDecStmt
  239           | Assignment
  240           | ShortVarDecl

  241 EmptyStmt: /* empty */

  242 ExpressionStmt: Expression

  243 SendStmt: Channel CHANNELOP Expression

  244 Channel: Expression

  245 IncDecStmt: Expression INCRE_DECRE

  246 Assignment: ExpressionList assign_op ExpressionList

  247 assign_op: ARITH_ASSIGN
  248          | '='

  249 GoStmt: GO Expression

  250 ReturnStmt: RETURN ExpressionList
  251           | RETURN

  252 BreakStmt: BREAK IDENTIFIER
  253          | BREAK

  254 ContinueStmt: CONTINUE IDENTIFIER
  255             | CONTINUE

  256 GotoStmt: GOTO IDENTIFIER

  257 FallthroughStmt: FALLTHROUGH

  258 Block: '{' StatementList '}'

  259 StatementList: Statement SEMICOLON StatementList
  260              | /* empty */

  261 IfStmt: IF SimpleStmt SEMICOLON Expression Block ELSE IfStmt
  262       | IF SimpleStmt SEMICOLON Expression Block ELSE Block
  263       | IF Expression Block ELSE IfStmt
  264       | IF Expression Block ELSE Block
  265       | IF Expression Block

  266 SwitchStmt: ExprSwitchStmt
  267           | TypeSwitchStmt

  268 ExprSwitchStmt: SWITCH SimpleStmtBrakets ExpressionBrakets '{' ExprCaseClauseLoop '}'

  269 SimpleStmtBrakets: SimpleStmt SEMICOLON
  270                  | /* empty */

  271 ExpressionBrakets: Expression
  272                  | /* empty */

  273 ExprCaseClause: ExprSwitchCase COLON StatementList

  274 ExprCaseClauseLoop: ExprCaseClause ExprCaseClauseLoop
  275                   | /* empty */

  276 ExprSwitchCase: CASE ExpressionList
  277               | DEFAULT

  278 TypeSwitchStmt: SWITCH SimpleStmtBrakets TypeSwitchGuard '{' TypeCaseClauseLoop '}'

  279 TypeSwitchGuard: IdetifierGodefBrakets PrimaryExpr '.' '(' Type ')'

  280 IdetifierGodefBrakets: IDENTIFIER GODEF
  281                      | /* empty */

  282 TypeCaseClause: TypeSwitchCase COLON StatementList

  283 TypeCaseClauseLoop: TypeCaseClause TypeCaseClauseLoop
  284                   | /* empty */

  285 TypeSwitchCase: CASE TypeList
  286               | DEFAULT

  287 SelectStmt: SELECT '{' CommClauseLoop '}'

  288 CommClause: CommCase COLON StatementList

  289 CommClauseLoop: CommClause CommClauseLoop
  290               | /* empty */

  291 CommCase: /* empty */
  292         | CASE RecvStmt
  293         | DEFAULT

  294 RecvStmt: ExpressionList '=' RecvExpr
  295         | IdentifierList GODEF RecvExpr
  296         | RecvExpr

  297 RecvExpr: Expression

  298 ForStmt: FOR ForClauseBracket Block

  299 ForClauseBracket: Condition
  300                 | ForClause
  301                 | RangeClause
  302                 | /* empty */

  303 Condition: Expression

  304 ForClause: InitStmtBracket SEMICOLON ConditionBracket SEMICOLON PostStmtBracket

  305 InitStmt: SimpleStmt

  306 InitStmtBracket: InitStmt
  307                | /* empty */

  308 ConditionBracket: Condition
  309                 | /* empty */

  310 PostStmt: SimpleStmt

  311 PostStmtBracket: PostStmt

  312 RangeClause: ExpressionList '=' RANGE Expression
  313            | IdentifierList GODEF RANGE Expression
  314            | RANGE Expression

  315 DeferStmt: DEFER Expression

  316 SourceFile: PackageClause SEMICOLON ImportLoop TopLevelLoop

  317 ImportLoop: ImportDecl SEMICOLON ImportLoop
  318           | /* empty */

  319 TopLevelLoop: TopLevelDecl SEMICOLON TopLevelLoop
  320             | /* empty */

  321 PackageClause: PACKAGE IDENTIFIER

  322 ImportDecl: IMPORT ImportSpec
  323           | IMPORT '(' ImportSpecLoop ')'

  324 ImportSpec: '.' ImportPath
  325           | IDENTIFIER ImportPath
  326           | ImportPath

  327 ImportSpecLoop: ImportSpec SEMICOLON ImportSpecLoop
  328               | /* empty */

  329 ImportPath: StringValue


Terminals, with rules where they appear

$end (0) 0
'!' (33) 212
'%' (37) 207
'&' (38) 209 215
'(' (40) 3 46 47 48 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 87
    98 112 129 174 175 217 218 279 323
')' (41) 3 46 47 48 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 87
    98 112 129 174 175 217 218 279 323
'*' (42) 39 41 42 205 214
'+' (43) 201 210
',' (44) 7 48 50 58 61 64 65 66 67 70 93 95 107 108 145 150 176 178
    180 182 184 185 186 187 217
'-' (45) 202 211
'.' (46) 28 168 174 189 279 324
'/' (47) 206
':' (58) 148
';' (59) 32
'=' (61) 88 89 103 113 115 248 294 312
'[' (91) 9 29 30 76 106 107 140 169 170 171
']' (93) 9 29 30 76 106 107 140 169 170 171
'^' (94) 204 213
'{' (123) 31 55 145 146 147 258 268 278 287
'|' (124) 74 75 203
'}' (125) 31 55 145 146 147 258 268 278 287
'~' (126) 73 75
error (256)
BREAK (258) 252 253
DEFAULT (259) 277 286 293
SELECT (260) 287
SWITCH (261) 268 278
CASE (262) 276 285 292
FALLTHROUGH (263) 257
IF (264) 261 262 263 264 265
ELSE (265) 261 262 263 264
GOTO (266) 256
RANGE (267) 312 313 314
FOR (268) 298
CONTINUE (269) 254 255
FUNC (270) 43 119 120 121 122 124 125 157
INTERFACE (271) 55
DEFER (272) 315
RETURN (273) 250 251
ARGS (274) 53 54 140 176 177 180 181 184 185
GO (275) 249
CHAN (276) 77 78 79
MAP (277) 76
STRUCT (278) 31
CONST (279) 86 87
TYPE (280) 97 98
VAR (281) 111 112
ANY (282) 18
BOOL (283) 20
BYTE (284) 21
COMPARABLE (285) 22
INT (286) 25
COMPLEX (287) 23
ERROR (288) 24
FLOAT (289) 19
STRING (290) 27
RUNE (291) 26
PACKAGE (292) 321
IMPORT (293) 322 323
IDENTIFIER (294) 5 28 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70
    93 94 103 104 105 119 120 121 122 124 125 152 158 168 189 234 252
    254 256 280 321 325
IntegerValue (295) 133
FloatValue (296) 134
StringValue (297) 35 37 136 329
ImaginaryValue (298) 135
BooleanValue (299)
COLON (300) 170 171 234 273 282 288
SEMICOLON (301) 32 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71
    91 101 116 259 261 262 269 304 316 317 319 327
GODEF (302) 118 280 295 313
INCRE_DECRE (303) 245
LRSHIFT (304) 208
ARITH_ASSIGN (305) 247
BIT_ASSIGN (306)
AND (307) 195
OR (308) 196
COMPARE (309) 200
CHANNELOP (310) 78 79 216 243


Nonterminals, with rules where they appear

$accept (77)
    on left: 0
Type (78)
    on left: 1 2 3 4, on right: 3 7 8 29 30 34 35 42 45 51 52 53 54
    68 69 70 72 73 74 75 76 77 78 79 88 103 104 105 113 114 140 174
    180 181 182 183 184 185 186 187 190 217 218 279
TypeName (79)
    on left: 5 6, on right: 1 2 38 39 40 41 143 144
TypeList (80)
    on left: 7 8, on right: 7 9 285
TypeArgs (81)
    on left: 9, on right: 2 40 41 127 144
TypeLit (82)
    on left: 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27,
    on right: 4
QualifiedIdent (83)
    on left: 28, on right: 6 159
ArrayType (84)
    on left: 29, on right: 10 139
SliceType (85)
    on left: 30, on right: 15 141
StructType (86)
    on left: 31, on right: 11 138
StructTypeLoop (87)
    on left: 32 33, on right: 31 32
FieldDecl (88)
    on left: 34 35 36 37, on right: 32
EmbeddedField (89)
    on left: 38 39 40 41, on right: 36 37
PointerType (90)
    on left: 42, on right: 12
FunctionType (91)
    on left: 43, on right: 13
Signature (92)
    on left: 44 45, on right: 43 119 120 121 122 124 125 157
Parameters (93)
    on left: 46 47 48, on right: 44 45 124 125
ParameterList (94)
    on left: 49 50, on right: 47 48 57 58 60 61 62 63 64 65 66 67 69
    70
ParameterDecl (95)
    on left: 51 52 53 54, on right: 49 50
InterfaceType (96)
    on left: 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71, on right:
    14 55
TypeElem (97)
    on left: 72 73 74 75, on right: 71 72 73 110
MapType (98)
    on left: 76, on right: 16 142
ChannelType (99)
    on left: 77 78 79, on right: 17
Declaration (100)
    on left: 80 81 82, on right: 83 219
TopLevelDecl (101)
    on left: 83 84 85, on right: 319
ConstDecl (102)
    on left: 86 87, on right: 80
ConstSpec (103)
    on left: 88 89 90, on right: 86 91
ConstSpecLoop (104)
    on left: 91 92, on right: 87 91
IdentifierList (105)
    on left: 93 94, on right: 34 35 52 54 88 89 90 93 110 113 114 115
    118 295 313
ExpressionList (106)
    on left: 95 96, on right: 88 89 95 113 115 118 176 177 178 179
    184 185 186 187 246 250 276 294 312
TypeDecl (107)
    on left: 97 98, on right: 81
TypeSpec (108)
    on left: 99 100, on right: 97 101
TypeSpecLoop (109)
    on left: 101 102, on right: 98 101
AliasDecl (110)
    on left: 103, on right: 99
TypeDef (111)
    on left: 104 105, on right: 100
TypeParameters (112)
    on left: 106 107, on right: 105 119 121
TypeParamList (113)
    on left: 108 109, on right: 106 107 108
TypeParamDecl (114)
    on left: 110, on right: 108 109
VarDecl (115)
    on left: 111 112, on right: 82
VarSpec (116)
    on left: 113 114 115, on right: 111 116
VarSpecLoop (117)
    on left: 116 117, on right: 112 116
ShortVarDecl (118)
    on left: 118, on right: 240
FunctionDecl (119)
    on left: 119 120 121 122, on right: 84
FunctionBody (120)
    on left: 123, on right: 119 120 124 157
MethodDecl (121)
    on left: 124 125, on right: 85
Operand (122)
    on left: 126 127 128 129, on right: 160
Literal (123)
    on left: 130 131 132, on right: 126
BasicLit (124)
    on left: 133 134 135 136, on right: 130
CompositeLit (125)
    on left: 137, on right: 131
LiteralType (126)
    on left: 138 139 140 141 142 143 144, on right: 137
LiteralValue (127)
    on left: 145 146 147, on right: 137 154 156
KeyedElement (128)
    on left: 148 149, on right: 150 151
ElementList (129)
    on left: 150 151, on right: 145 146 150
Key (130)
    on left: 152 153 154, on right: 148
Element (131)
    on left: 155 156, on right: 148 149
FunctionLit (132)
    on left: 157, on right: 132
OperandName (133)
    on left: 158 159, on right: 127 128
PrimaryExpr (134)
    on left: 160 161 162 163 164 165 166 167, on right: 163 164 165
    166 167 193 279
Selector (135)
    on left: 168, on right: 163
Index (136)
    on left: 169, on right: 164
Slice (137)
    on left: 170 171, on right: 165
ExpressionLoop (138)
    on left: 172 173, on right: 170 171
TypeAssertion (139)
    on left: 174, on right: 166
Arguments (140)
    on left: 175, on right: 167
ArgumentsLoop (141)
    on left: 176 177 178 179 180 181 182 183 184 185 186 187 188, on right:
    175
MethodExpr (142)
    on left: 189, on right: 162
ParametersType (143)
    on left: 190, on right: 189
Expression (144)
    on left: 191 192, on right: 29 95 96 129 153 155 169 171 172 192
    217 218 242 243 244 245 249 261 262 263 264 265 271 297 303 312
    313 314 315
UnaryExpr (145)
    on left: 193 194, on right: 191 194
binary_op (146)
    on left: 195 196 197 198 199, on right: 192
rel_op (147)
    on left: 200, on right: 197
add_op (148)
    on left: 201 202 203 204, on right: 198
mul_op (149)
    on left: 205 206 207 208 209, on right: 199
unary_op (150)
    on left: 210 211 212 213 214 215 216, on right: 194
Conversion (151)
    on left: 217 218, on right: 161
Statement (152)
    on left: 219 220 221 222 223 224 225 226 227 228 229 230 231 232
    233, on right: 234 259
LabeledStmt (153)
    on left: 234, on right: 220
SimpleStmt (154)
    on left: 235 236 237 238 239 240, on right: 221 261 262 269 305
    310
EmptyStmt (155)
    on left: 241, on right: 235
ExpressionStmt (156)
    on left: 242, on right: 236
SendStmt (157)
    on left: 243, on right: 237
Channel (158)
    on left: 244, on right: 243
IncDecStmt (159)
    on left: 245, on right: 238
Assignment (160)
    on left: 246, on right: 239
assign_op (161)
    on left: 247 248, on right: 246
GoStmt (162)
    on left: 249, on right: 222
ReturnStmt (163)
    on left: 250 251, on right: 223
BreakStmt (164)
    on left: 252 253, on right: 224
ContinueStmt (165)
    on left: 254 255, on right: 225
GotoStmt (166)
    on left: 256, on right: 226
FallthroughStmt (167)
    on left: 257, on right: 227
Block (168)
    on left: 258, on right: 123 228 261 262 263 264 265 298
StatementList (169)
    on left: 259 260, on right: 258 259 273 282 288
IfStmt (170)
    on left: 261 262 263 264 265, on right: 229 261 263
SwitchStmt (171)
    on left: 266 267, on right: 230
ExprSwitchStmt (172)
    on left: 268, on right: 266
SimpleStmtBrakets (173)
    on left: 269 270, on right: 268 278
ExpressionBrakets (174)
    on left: 271 272, on right: 268
ExprCaseClause (175)
    on left: 273, on right: 274
ExprCaseClauseLoop (176)
    on left: 274 275, on right: 268 274
ExprSwitchCase (177)
    on left: 276 277, on right: 273
TypeSwitchStmt (178)
    on left: 278, on right: 267
TypeSwitchGuard (179)
    on left: 279, on right: 278
IdetifierGodefBrakets (180)
    on left: 280 281, on right: 279
TypeCaseClause (181)
    on left: 282, on right: 283
TypeCaseClauseLoop (182)
    on left: 283 284, on right: 278 283
TypeSwitchCase (183)
    on left: 285 286, on right: 282
SelectStmt (184)
    on left: 287, on right: 231
CommClause (185)
    on left: 288, on right: 289
CommClauseLoop (186)
    on left: 289 290, on right: 287 289
CommCase (187)
    on left: 291 292 293, on right: 288
RecvStmt (188)
    on left: 294 295 296, on right: 292
RecvExpr (189)
    on left: 297, on right: 294 295 296
ForStmt (190)
    on left: 298, on right: 232
ForClauseBracket (191)
    on left: 299 300 301 302, on right: 298
Condition (192)
    on left: 303, on right: 299 308
ForClause (193)
    on left: 304, on right: 300
InitStmt (194)
    on left: 305, on right: 306
InitStmtBracket (195)
    on left: 306 307, on right: 304
ConditionBracket (196)
    on left: 308 309, on right: 304
PostStmt (197)
    on left: 310, on right: 311
PostStmtBracket (198)
    on left: 311, on right: 304
RangeClause (199)
    on left: 312 313 314, on right: 301
DeferStmt (200)
    on left: 315, on right: 233
SourceFile (201)
    on left: 316, on right: 0
ImportLoop (202)
    on left: 317 318, on right: 316 317
TopLevelLoop (203)
    on left: 319 320, on right: 316 319
PackageClause (204)
    on left: 321, on right: 316
ImportDecl (205)
    on left: 322 323, on right: 317
ImportSpec (206)
    on left: 324 325 326, on right: 322 327
ImportSpecLoop (207)
    on left: 327 328, on right: 323 327
ImportPath (208)
    on left: 329, on right: 324 325 326


state 0

    0 $accept: . SourceFile $end

    PACKAGE  shift, and go to state 1

    SourceFile     go to state 2
    PackageClause  go to state 3


state 1

  321 PackageClause: PACKAGE . IDENTIFIER

    IDENTIFIER  shift, and go to state 4


state 2

    0 $accept: SourceFile . $end

    $end  shift, and go to state 5


state 3

  316 SourceFile: PackageClause . SEMICOLON ImportLoop TopLevelLoop

    SEMICOLON  shift, and go to state 6


state 4

  321 PackageClause: PACKAGE IDENTIFIER .

    $default  reduce using rule 321 (PackageClause)


state 5

    0 $accept: SourceFile $end .

    $default  accept


state 6

  316 SourceFile: PackageClause SEMICOLON . ImportLoop TopLevelLoop

    IMPORT  shift, and go to state 7

    $default  reduce using rule 318 (ImportLoop)

    ImportLoop  go to state 8
    ImportDecl  go to state 9


state 7

  322 ImportDecl: IMPORT . ImportSpec
  323           | IMPORT . '(' ImportSpecLoop ')'

    IDENTIFIER   shift, and go to state 10
    StringValue  shift, and go to state 11
    '('          shift, and go to state 12
    '.'          shift, and go to state 13

    ImportSpec  go to state 14
    ImportPath  go to state 15


state 8

  316 SourceFile: PackageClause SEMICOLON ImportLoop . TopLevelLoop

    FUNC   shift, and go to state 16
    CONST  shift, and go to state 17
    TYPE   shift, and go to state 18
    VAR    shift, and go to state 19

    $default  reduce using rule 320 (TopLevelLoop)

    Declaration   go to state 20
    TopLevelDecl  go to state 21
    ConstDecl     go to state 22
    TypeDecl      go to state 23
    VarDecl       go to state 24
    FunctionDecl  go to state 25
    MethodDecl    go to state 26
    TopLevelLoop  go to state 27


state 9

  317 ImportLoop: ImportDecl . SEMICOLON ImportLoop

    SEMICOLON  shift, and go to state 28


state 10

  325 ImportSpec: IDENTIFIER . ImportPath

    StringValue  shift, and go to state 11

    ImportPath  go to state 29


state 11

  329 ImportPath: StringValue .

    $default  reduce using rule 329 (ImportPath)


state 12

  323 ImportDecl: IMPORT '(' . ImportSpecLoop ')'

    IDENTIFIER   shift, and go to state 10
    StringValue  shift, and go to state 11
    '.'          shift, and go to state 13

    $default  reduce using rule 328 (ImportSpecLoop)

    ImportSpec      go to state 30
    ImportSpecLoop  go to state 31
    ImportPath      go to state 15


state 13

  324 ImportSpec: '.' . ImportPath

    StringValue  shift, and go to state 11

    ImportPath  go to state 32


state 14

  322 ImportDecl: IMPORT ImportSpec .

    $default  reduce using rule 322 (ImportDecl)


state 15

  326 ImportSpec: ImportPath .

    $default  reduce using rule 326 (ImportSpec)


state 16

  119 FunctionDecl: FUNC . IDENTIFIER TypeParameters Signature FunctionBody
  120             | FUNC . IDENTIFIER Signature FunctionBody
  121             | FUNC . IDENTIFIER TypeParameters Signature
  122             | FUNC . IDENTIFIER Signature
  124 MethodDecl: FUNC . Parameters IDENTIFIER Signature FunctionBody
  125           | FUNC . Parameters IDENTIFIER Signature

    IDENTIFIER  shift, and go to state 33
    '('         shift, and go to state 34

    Parameters  go to state 35


state 17

   86 ConstDecl: CONST . ConstSpec
   87          | CONST . '(' ConstSpecLoop ')'

    IDENTIFIER  shift, and go to state 36
    '('         shift, and go to state 37

    ConstSpec       go to state 38
    IdentifierList  go to state 39


state 18

   97 TypeDecl: TYPE . TypeSpec
   98         | TYPE . '(' TypeSpecLoop ')'

    IDENTIFIER  shift, and go to state 40
    '('         shift, and go to state 41

    TypeSpec   go to state 42
    AliasDecl  go to state 43
    TypeDef    go to state 44


state 19

  111 VarDecl: VAR . VarSpec
  112        | VAR . '(' VarSpecLoop ')'

    IDENTIFIER  shift, and go to state 36
    '('         shift, and go to state 45

    IdentifierList  go to state 46
    VarSpec         go to state 47


state 20

   83 TopLevelDecl: Declaration .

    $default  reduce using rule 83 (TopLevelDecl)


state 21

  319 TopLevelLoop: TopLevelDecl . SEMICOLON TopLevelLoop

    SEMICOLON  shift, and go to state 48


state 22

   80 Declaration: ConstDecl .

    $default  reduce using rule 80 (Declaration)


state 23

   81 Declaration: TypeDecl .

    $default  reduce using rule 81 (Declaration)


state 24

   82 Declaration: VarDecl .

    $default  reduce using rule 82 (Declaration)


state 25

   84 TopLevelDecl: FunctionDecl .

    $default  reduce using rule 84 (TopLevelDecl)


state 26

   85 TopLevelDecl: MethodDecl .

    $default  reduce using rule 85 (TopLevelDecl)


state 27

  316 SourceFile: PackageClause SEMICOLON ImportLoop TopLevelLoop .

    $default  reduce using rule 316 (SourceFile)


state 28

  317 ImportLoop: ImportDecl SEMICOLON . ImportLoop

    IMPORT  shift, and go to state 7

    $default  reduce using rule 318 (ImportLoop)

    ImportLoop  go to state 49
    ImportDecl  go to state 9


state 29

  325 ImportSpec: IDENTIFIER ImportPath .

    $default  reduce using rule 325 (ImportSpec)


state 30

  327 ImportSpecLoop: ImportSpec . SEMICOLON ImportSpecLoop

    SEMICOLON  shift, and go to state 50


state 31

  323 ImportDecl: IMPORT '(' ImportSpecLoop . ')'

    ')'  shift, and go to state 51


state 32

  324 ImportSpec: '.' ImportPath .

    $default  reduce using rule 324 (ImportSpec)


state 33

  119 FunctionDecl: FUNC IDENTIFIER . TypeParameters Signature FunctionBody
  120             | FUNC IDENTIFIER . Signature FunctionBody
  121             | FUNC IDENTIFIER . TypeParameters Signature
  122             | FUNC IDENTIFIER . Signature

    '('  shift, and go to state 34
    '['  shift, and go to state 52

    Signature       go to state 53
    Parameters      go to state 54
    TypeParameters  go to state 55


state 34

   46 Parameters: '(' . ')'
   47           | '(' . ParameterList ')'
   48           | '(' . ParameterList ',' ')'
